# SPIRV-Reflect

./: .gitignore  .gitmodules  BUILD.bazel  CMakeLists.txt  README.md  WORKSPACE  append_consume.yaml  main.cpp  spec_constant.patch  spirv_reflect.c  spirv_reflect.cpp  spirv_reflect.h  spirv_reflect.hpp
.github/workflows/: bazel-build.yml  check-formatting.yml  linux-bazel-build.yml  linux-build.yml  linux-cmake-build.yml  windows-build.yml  windows-cmake-build.yml
common/: arg_parser.cpp  arg_parser.h  output_stream.cpp  output_stream.h  to_string.cpp  to_string.h
examples/: CMakeLists.txt  arg_parser.cpp  arg_parser.h  build_sample_spv_h.sh  common.cpp  common.h  descriptors.cpp  find_pipelines.cpp  main_descriptors.cpp  main_explorer.cpp  main_hlsl_resource_types.cpp  main_io_variables.cpp  main_ubo_offsets.cpp  sample.hlsl  sample.spv  sample_spv.h
include/spirv/unified1/: spirv.h
programs/: CMakeLists.txt  main_spirv_diff.cpp
tests/: build_all_shaders.py  build_golden_yaml.py  test-spirv-reflect.cpp
tests/16bit/: vert_in_out_16.spv.yaml
tests/access_chains/: array_length_from_access_chain.spv.yaml  pointer_access_chain_phy_storage_buffer.spv.yaml
tests/cbuffer_unused/: cbuffer_unused_001.hlsl  cbuffer_unused_001.spv  cbuffer_unused_001.spv.yaml
tests/cpp/noncopyable/: CMakeLists.txt  (+1 more)
tests/entry_exec_mode/: comp_local_size.spv.yaml  geom_inv_out_vert.spv.yaml
tests/execution_mode/: local_size_id.spv.yaml  local_size_id_spec.spv.yaml
tests/glsl/: buffer_handle_0.spv.yaml  buffer_handle_1.spv.yaml  buffer_handle_2.spv.yaml  buffer_handle_3.spv.yaml  buffer_handle_4.spv.yaml  buffer_handle_5.spv.yaml  buffer_handle_6.spv.yaml  buffer_handle_7.spv.yaml  buffer_handle_8.spv.yaml  buffer_handle_9.spv.yaml  buffer_handle_uvec2_pc.spv.yaml  buffer_handle_uvec2_ssbo.spv.yaml  buffer_pointer.spv.yaml  built_in_format.spv  built_in_format.spv.yaml  fn_struct_param.spv.yaml  frag_array_input.spv.yaml  frag_barycentric.spv.yaml  input_attachment.spv  input_attachment.spv.yaml  input_attachment.txt  io_vars_vs.spv.yaml  matrix_array.glsl  matrix_array.spv  matrix_array.spv.yaml  matrix_major_order_glsl.spv.yaml  non_writable_image.spv.yaml  readonly_writeonly.spv.yaml  runtime_array_of_array_of_struct.spv.yaml  storage_buffer.spv.yaml  storage_buffer_runtime.glsl  storage_buffer_runtime.spv  storage_buffer_runtime.spv.yaml  struct_offset.glsl  struct_offset.spv  struct_offset.spv.yaml  struct_offset_order.spv.yaml  texel_buffer.spv  texel_buffer.spv.yaml  texel_buffer.txt
tests/hlsl/: append_consume.hlsl  append_consume.spv  append_consume.spv.yaml  append_consume.txt  array_of_structured_buffer.spv  array_of_structured_buffer.spv.yaml  binding_array.hlsl  binding_array.spv  binding_array.spv.yaml  binding_array.txt  binding_types.hlsl  binding_types.spv  binding_types.spv.yaml  binding_types.txt  binding_types_hlsl_resource_types.txt  byte_address_buffer.hlsl  byte_address_buffer_dxc.spv  byte_address_buffer_dxc.spv.yaml  byte_address_buffer_slang.spv  byte_address_buffer_slang.spv.yaml  cbuffer.hlsl  cbuffer.spv  cbuffer.spv.yaml  constantbuffer.spv  constantbuffer.spv.yaml  constantbuffer_nested_structs.spv  constantbuffer_nested_structs.spv.yaml  counter_buffers.spv  counter_buffers.spv.yaml  diff_descriptors_a.hlsl  diff_descriptors_a.spv  diff_descriptors_b.hlsl  diff_descriptors_b.spv  diff_io_vars_a.hlsl  diff_io_vars_a.spv  diff_io_vars_b.hlsl  diff_io_vars_b.spv  localsize.spv.yaml  matrix_major_order_hlsl.spv.yaml  pushconstant.spv.yaml  (+5 more)
tests/interface/: geom_input_builtin_array.spv.yaml  vertex_input_builtin_block.spv.yaml  vertex_input_builtin_non_block.spv.yaml
tests/mesh_shader_ext/: mesh_shader_ext.mesh.hlsl.spv.yaml  mesh_shader_ext.task.hlsl.spv.yaml
tests/multi_entrypoint/: multi_entrypoint.spv.yaml
tests/push_constants/: non_zero_block_offset.spv.yaml  pointer_in_struct.spv.yaml  pointer_in_struct_2.spv.yaml  push_constant_basic_0.spv.yaml  push_constant_basic_1.spv.yaml  push_constant_basic_2.spv.yaml  push_constant_basic_3.spv.yaml
tests/raytrace/: rayquery_equal.cs.spv.yaml  rayquery_init_ds.spv.yaml  rayquery_init_gs.spv.yaml  rayquery_init_hs.spv.yaml  rayquery_init_ps.spv.yaml  rayquery_init_rahit.spv.yaml  rayquery_init_rcall.spv.yaml  rayquery_init_rchit.spv.yaml  rayquery_init_rgen.spv.yaml  rayquery_init_rmiss.spv.yaml  raytracing.acceleration-structure.spv.yaml  raytracing.khr.closesthit.spv.yaml  raytracing.nv.acceleration-structure.spv.yaml  raytracing.nv.anyhit.spv.yaml  raytracing.nv.callable.spv.yaml  raytracing.nv.closesthit.spv.yaml  raytracing.nv.enum.spv.yaml  raytracing.nv.intersection.spv.yaml  raytracing.nv.library.spv.yaml  raytracing.nv.miss.spv.yaml  raytracing.nv.raygen.spv.yaml
tests/spec_constant/: rebuild.sh  test_32bit.spv  test_32bit.spv.dis  test_32bit.spv.dis.patch  test_64bit.spv  test_64bit.spv.dis  test_64bit.spv.dis.patch  test_convert.glsl  test_convert.spv  test_convert.spv.dis  test_convert.spv.dis.patch  test_localsizeid.spv  test_localsizeid.spv.dis  test_localsizeid.spv.dis.patch  test_orig.glsl  test_orig.spv.dis
tests/spec_constants/: basic.spv.yaml  convert.spv.yaml  local_size_id_10.spv.yaml  local_size_id_13.spv.yaml  ssbo_array.spv.yaml  test_32bit.spv.yaml  test_64bit.spv.yaml
tests/spirv15/: VertexShader.spv.yaml
tests/user_type/: byte_address_buffer.spv.yaml  byte_address_buffer_0.spv.yaml  byte_address_buffer_1.spv.yaml  byte_address_buffer_2.spv.yaml  byte_address_buffer_3.spv.yaml  rw_byte_address_buffer.spv.yaml
tests/usertype/: usertype.hlsl  usertype.spv
tests/variable_access/: atomics_0.spv.yaml  atomics_1.spv.yaml  copy_array_0.spv.yaml  copy_array_1.spv.yaml  copy_array_2.spv.yaml  copy_array_3.spv.yaml  copy_memory.spv.yaml  copy_struct_0.spv.yaml  copy_struct_1.spv.yaml  descriptor_indexing_0.spv.yaml  descriptor_indexing_1.spv.yaml  phy_storage_buffer_used_0.spv.yaml  phy_storage_buffer_used_1.spv.yaml  phy_storage_buffer_used_2.spv.yaml  phy_storage_buffer_used_3.spv.yaml
util/stripper/: CMakeLists.txt  io.h  main.cpp  sample.spv  stripper.cpp  stripper.h
(+8 files in other folders)
